--- a/frontend/app/views/notes/_template.html.erb
+++ b/frontend/app/views/notes/_template.html.erb
@@ -102,7 +102,7 @@
     <div class="subrecord-form-container">
       <%= form.hidden_input(:jsonmodel_type, "note_orderedlist") %>
       <%= form.label_and_textfield("title") %>
-      <%= form.label_and_textfield("enumeration") %>
+      <%= form.label_and_select("enumeration", form.possible_options_for("enumeration", true)) %>
       <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
 
       <div class="control-group">
