--- a/frontend/app/views/users/index.html.erb
+++ b/frontend/app/views/users/index.html.erb
@@ -18,11 +18,7 @@
     <div class="record-pane">
       <h2><%= @manage_access ? I18n.t("user._frontend.section.manage_access") : I18n.t("user._plural") %></h2>
 
-      <% if flash[:success] %>
-        <div class="alert alert-success">
-          <pre><%= flash[:success] %></pre>
-        </div>
-      <% end %>
+      <%= render :partial => "shared/flash_messages" %>
 
      <% if @search_data['results'].length %>
        <table class="table table-striped table-bordered table-condensed">
