--- a/frontend/app/views/locations/edit.html.erb
+++ b/frontend/app/views/locations/edit.html.erb
@@ -1,4 +1,4 @@
-<%= setup_context :object => @location, :title => @location.id %>
+<%= setup_context :object => @location, :title => @location.title %>
 
 <%= form_for @location, :as => "location", :url => {:action => :update}, :html => {:class => 'form-horizontal aspace-record-form'}.merge(update_monitor_params(@location)) do |f| %>
   <%= form_context :location, @location do |form| %>
