--- a/frontend/app/views/locations/show.html.erb
+++ b/frontend/app/views/locations/show.html.erb
@@ -1,4 +1,4 @@
-<%= setup_context :object => @location, :title => @location.id %>
+<%= setup_context :object => @location, :title => @location.title %>
 
 <div class="row-fluid">
    <div class="span3">
