--- a/frontend/app/views/repositories/show.html.erb
+++ b/frontend/app/views/repositories/show.html.erb
@@ -1,4 +1,4 @@
-<%= setup_context :object => JSONModel(:repository).from_hash(@repository['repository']), :title => @repository.id %>
+<%= setup_context :object => JSONModel(:repository).from_hash(@repository['repository']), :title => @repository.repository['name'] %>
 
 <div class="row-fluid">
   <div class="span3">
